# tinySA_mcp

./: .gitignore  LICENSE  README.md  README_update_plan.md  claude_desktop_config.json  pyproject.toml  tinySA_Operator - コピー.py  tinySA_Operator.py
material/: USB Interface.txt  tinySAノウハウ.txt
