[project]
name = "tinySA-mcp"
version = "0.1.0"
description = "MCP server for operating TinySA through serial port"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "pyserial>=3.5",
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["tinySA_Operator"]
